--- a/webapp/package.json
+++ b/webapp/package.json
@@ -4,17 +4,22 @@
   "private": true,
   "description": "",
   "scripts": {
+    "start": "webpack-dev-server --open --config webpack.config.js",
     "build": "webpack --config webpack.config.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "copy-webpack-plugin": "^6.0.3",
     "css-loader": "^4.2.1",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.10.0",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.3",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   }
 }
