--- a/webapp/package.json
+++ b/webapp/package.json
@@ -14,6 +14,7 @@
     "copy-webpack-plugin": "^6.0.3",
     "css-loader": "^4.2.1",
     "file-loader": "^6.0.0",
+    "handlebars-webpack-plugin": "^2.1.1",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.10.0",
     "sass": "^1.26.10",
