--- a/webapp/package.json
+++ b/webapp/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "description": "",
   "scripts": {
-    "start": "webpack-dev-server --open --config webpack.config.js",
-    "build": "webpack --config webpack.config.js"
+    "start": "webpack-dev-server --open --config webpack.config.dev.js",
+    "build": "webpack --config webpack.config.prod.js"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +24,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.14.0"
+    "@fortawesome/fontawesome-free": "^5.14.0",
+    "webpack-merge": "^5.3.0"
   }
 }
