--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "grunt",
-    "start": "npm run build && node ./app/server.js"
+    "build:prod": "grunt",
+    "start:dev": "NODE_ENV=development node ./server.js",
+    "start": "NODE_ENV=production node ./server.js"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,10 @@
     "url": "https://github.com/proitschool/resume_fe-0001/issues"
   },
   "homepage": "https://github.com/proitschool/resume_fe-0001#readme",
-  "dependencies": {},
+  "dependencies": {
+    "cookie-parser": "^1.4.5",
+    "express": "^4.17.1"
+  },
   "devDependencies": {
     "grunt": "^1.3.0",
     "grunt-cli": "^1.3.2",
